# target-determinator

./: MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  go.mod  go.sum
driver/: BUILD.bazel
pkg/: BUILD.bazel
target-determinator/: BUILD.bazel
