module(name = "target_determinator")
###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# -- bazel_dep definitions -- #
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.39.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_jvm_external", version = "6.2")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_java", version = "7.10.0")

# Golang
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.23.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_aristanetworks_goarista",
    "com_github_google_btree",
    "com_github_google_uuid",
    "com_github_hashicorp_go_version",
    "com_github_otiai10_copy",
    "com_github_stretchr_testify",
    "com_github_wi2l_jsondiff",
    "org_golang_google_protobuf",
)

# Maven
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "maven")
